Отработал ФЗ№9 (HTTP)